fix(ui): remove gap from group

--- a/src/accordion-group/style.scss
+++ b/src/accordion-group/style.scss
@@ -8,7 +8,6 @@
 .wp-block-accordion-group {
     display: flex;
     flex-direction: column;
-    gap: var(--wp--preset--spacing--small, 10px);
     padding: var(--wp--preset--spacing--medium, 0px);
     background: var(--wp--preset--color--background, transparent);
     color: var(--wp--preset--color--text, #333);
